<resources>
    <string name="app_name">Seedit</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_message">Login with</string>
    <string name="login_facebook_text">Facebook</string>
    <string name="login_google_text">Google+</string>
    <string name="login_email_text">Email</string>
    <string name="login_signup_text">Sign Up</string>
    <string name="title_activity_signup">Signup for Seedit</string>

    <string name="hello_world">Hello world!</string>
    <string name="signup_message">Signup with</string>
    <string name="signup_facebook_text">Signup with Facebook</string>
    <string name="signup_google_text">Signup with Google+</string>
    <string name="signup_button_text">Signup</string>
    <string name="signup_email_hint">Email</string>
    <string name="signup_password_hint">Password</string>
    <string name="signup_first_name_hint">First Name</string>
    <string name="signup_last_name_hint">Last Name</string>
    <string name="signup_username_hint">Username</string>

    <string name="signup_error_title">Oops!</string>
    <string name="signup_error_message">Please make sure you enter a username, password,
        and email address!</string>
    <string name="title_activity_main_activity">Seedit</string>

    <string name="title_my_garden">Garden</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="title_activity_login_detail">Login to Seedit</string>
    <string name="login_button_text">Login</string>
    <string name="login_error_message">Please make sure you enter a username and password!</string>
    <string name="login_error_title">Oops!</string>
    <string name="menu_logout_label">Logout</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_garden_message">No Plants In Garden</string>
    <string name="add_plant_button_text">Add Plant</string>
    <string name="title_activity_add_plant">Add Plant</string>
    <string name="title_seedit_store">Seedit Store</string>
    <string name="title_dashboard">My Seedit</string>
    <string name="title_activity_add_custom_plant">Add Plant</string>

    <string name="error_selecting_file_title">We\'re sorry!</string>
    <string name="success_message">Plant added!</string>
    <string name="error_sending_message">There was an error in adding your plant.
        Please try again.</string>

    <string name="sign_in">Sign in</string>

    <string name="inbox">Inbox</string>
    <string name="starred">Starred</string>
    <string name="sent_mail">Sent Mail</string>
    <string name="drafts">Drafts</string>
    <string name="more_markers">+ Markers</string>
    <string name="trash">Trash</string>
    <string name="spam">Spam</string>
    <string name="settings">Settings</string>

    <string name="add">Add</string>
    <string name="search">Search</string>

    <!-- Toast -->
    <string name="open_user_profile">Open user profile</string>
    <string name="open_settings">Open settings</string>
    <string name="action_help_text">Help</string>
    <string name="title_seedit_online">SeeditOnline</string>
    <string name="title_friends">Friends</string>
    <string name="title_tasks">Tasks</string>
    <string name="title_activity_plant_info">Plant Info</string>
    <string name="title_activity_store">Seedit Store</string>

    <string-array name="states_array">
        <item>AK</item>
        <item>AL</item>AL
        <item>AZ</item>
        <item>AR</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DE</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>IA</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>ME</item>
        <item>MD</item>
        <item>MA</item>
        <item>MI</item>
        <item>MN</item>
        <item>MS</item>
        <item>MO</item>
        <item>MT</item>
        <item>NE</item>
        <item>NV</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NY</item>
        <item>NC</item>
        <item>ND</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VT</item>
        <item>VA</item>
        <item>WA</item>
        <item>WV</item>
        <item>WI</item>
        <item>WY</item>
    </string-array>
    <string name="title_activity_seedit_plant">Seedit Plants</string>
    <string name="title_activity_seedit_plants_list_adapter">SeeditPlantsListAdapter</string>
</resources>
