<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context="aurora.seedit.ui.LoginActivity"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.45"
        android:layout_gravity="center_horizontal"
        android:background="@color/nliveo_green_colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:id="@+id/app_name"
            android:textSize="64sp"
            android:textColor="@android:color/white"
            android:layout_marginRight="75dp"
            android:layout_marginEnd="48dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>

        <ImageView
            android:layout_marginRight="-20dp"
            android:src="@drawable/plant10"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:id="@+id/plant_logo"
            android:layout_toStartOf="@+id/app_name"
            android:layout_alignBottom="@+id/app_name"
            android:layout_alignTop="@+id/app_name"
            android:layout_toLeftOf="@+id/app_name"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.55"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/white"
        android:id="@+id/login_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_message"
            android:id="@+id/login_message"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"/>

        <Button
            style="@style/login_button"
            android:id="@+id/facebook_login_button"
            android:text="@string/login_facebook_text"
            android:background="@color/facebook_blue"
            android:textColor="@android:color/white"
            android:layout_below="@+id/login_message"/>

        <Button
            style="@style/login_button"
            android:text="@string/login_google_text"
            android:id="@+id/google_login_button"
            android:layout_below="@+id/facebook_login_button"
            android:background="@color/google_red"
            android:textColor="@android:color/white"/>

        <Button
            style="@style/login_button"
            android:text="@string/login_email_text"
            android:id="@+id/email_login_button"
            android:layout_below="@+id/google_login_button"
            android:background="@color/email_blue"
            android:textColor="@android:color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_signup_text"
            android:id="@+id/signup_button"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/email_login_button"
            android:layout_centerHorizontal="true"
            android:textColor="@color/seedit_green"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:background="@drawable/border"/>

    </RelativeLayout>

</LinearLayout>