<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="aurora.seedit.ui.LoginDetailActivity">
    <EditText
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:id="@+id/login_username_field"
        android:ems="10"
        android:hint="@string/signup_username_hint"
        android:layout_below="@+id/divider"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="@android:color/darker_gray"/>

    <EditText
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/signup_password_hint"
        android:id="@+id/login_password_field"
        android:layout_below="@+id/login_username_field"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="@android:color/darker_gray"/>

    <Button
        style="@style/login_button"
        android:text="@string/login_button_text"
        android:id="@+id/login_button"
        android:layout_below="@+id/login_password_field"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:background="@color/seedit_green"
        android:textColor="@android:color/white"/>

</RelativeLayout>
