<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="aurora.seedit.ui.SignupActivity"
                android:background="@android:color/white"
                android:id="@+id/signup_layout">

    <Button
        style="@style/login_button"
        android:id="@+id/facebook_signup_button"
        android:text="@string/signup_facebook_text"
        android:background="@color/facebook_blue"
        android:textColor="@android:color/white"
        android:layout_marginTop="20dp"/>

    <Button
        style="@style/login_button"
        android:text="@string/signup_google_text"
        android:id="@+id/google_signup_button"
        android:layout_below="@+id/facebook_signup_button"
        android:background="@color/google_red"
        android:textColor="@android:color/white"/>

    <View
        android:layout_marginTop="30dp"
        android:layout_below="@+id/google_signup_button"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Or"
        android:id="@+id/divider"
        android:layout_below="@+id/google_signup_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:background="@android:color/white"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"/>

    <!--<EditText-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:inputType="textPersonName"-->
        <!--android:text="@string/signup_first_name_hint"-->
        <!--android:ems="10"-->
        <!--android:id="@+id/first_name_field"-->
        <!--android:layout_below="@+id/divider"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_alignParentStart="true"-->
        <!--android:layout_toLeftOf="@+id/divider"-->
        <!--android:layout_toStartOf="@+id/divider"-->
        <!--android:textColor="@android:color/darker_gray"/>-->

    <!--<EditText-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:inputType="textPersonName"-->
        <!--android:text="@string/signup_last_name_hint"-->
        <!--android:ems="10"-->
        <!--android:id="@+id/last_name_field"-->
        <!--android:layout_below="@+id/divider"-->
        <!--android:layout_toEndOf="@+id/divider"-->
        <!--android:layout_toRightOf="@+id/divider"-->
        <!--android:textColor="@android:color/darker_gray"/>-->

    <EditText
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:id="@+id/username_field"
        android:ems="10"
        android:hint="@string/signup_username_hint"
        android:layout_below="@+id/divider"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="@android:color/darker_gray"/>

    <EditText
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:hint="@string/signup_email_hint"
        android:id="@+id/signup_email_field"
        android:layout_below="@+id/username_field"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="@android:color/darker_gray"/>

    <EditText
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/signup_password_hint"
        android:id="@+id/signup_password_field"
        android:layout_below="@+id/signup_email_field"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="@android:color/darker_gray"/>

    <Button
        style="@style/login_button"
        android:text="@string/signup_button_text"
        android:id="@+id/signup_button"
        android:layout_below="@+id/signup_password_field"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:background="@color/seedit_green"
        android:textColor="@android:color/white"/>

</RelativeLayout>
